@@ -18,6 +18,6 @@ public interface FlashPlayerListener extends SWTEventListener {
    * The Flash player can invoke special commands to the application simply by calling:<br>
    * <code>ExternalInterface.call("sendCommand", commandName, arg1, arg2, ...);</code>
    */
-  public void commandReceived(String command, String[] args);
+  public void commandReceived(String command, Object[] args);
 
 }
