@@ -131,9 +131,12 @@ public class JFlashPlayer extends Composite {
     webBrowserObject = new NWebBrowserObject(this);
     webBrowser.addWebBrowserListener(new WebBrowserAdapter() {
       @Override
-      public void commandReceived(WebBrowserEvent e, String command, String[] args) {
+      public void commandReceived(WebBrowserEvent e, String command, Object[] args) {
+        boolean isInternal = command.startsWith("[Chrriis]");
         for(FlashPlayerListener listener: getFlashPlayerListeners()) {
-          listener.commandReceived(command, args);
+          if(!isInternal || listener.getClass().getName().startsWith("chrriis.")) {
+            listener.commandReceived(command, args);
+          }
         }
       }
     });
